- Started work on Sync view - Implemented service result receiver

--- a/res/layout/activity_recent_orders.xml
+++ b/res/layout/activity_recent_orders.xml
@@ -2,7 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/recent_orders_root"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
+
+    <include
+        android:id="@+id/include1"
+        layout="@layout/syncing_progressbar" />
 
     <fragment
         android:id="@+id/fragment_order_list"
