--- a/res/layout/list_item_order.xml
+++ b/res/layout/list_item_order.xml
@@ -1,28 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/gridLayout1"
+    style="@android:style/Widget.ProgressBar.Horizontal"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal" >
+    android:layout_weight="1"
+    android:columnCount="2"
+    android:padding="10dp"
+    android:rowCount="4" >
 
     <TextView
-        android:id="@+id/textView1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:id="@+id/item_reference"
+        style="@style/OrderItem.Reference"
+        android:layout_column="0"
+        android:layout_row="1"
+        android:text="AFBDKDKC DD" />
+
+    <TextView
+        android:id="@+id/item_order_id"
+        android:layout_column="0"
+        android:layout_row="2"
         android:text="TextView" />
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="TextView" />
-
+        android:id="@+id/item_delivery_date"
+        android:layout_column="1"
+        
+        android:layout_gravity="right"
+        android:layout_row="1"
+        android:text="Large Text"
+        style="@style/OrderItem.DeliveryDate" />
+
     <TextView
-        android:id="@+id/textView3"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:id="@+id/item_status"
+        android:layout_column="1"
+        android:layout_gravity="right"
+        android:layout_row="2"
         android:text="TextView" />
+
+    <ProgressBar
+        android:id="@+id/item_progressbar"
+        style="@style/OrderItem.ProgressBar"
+        android:layout_column="0"
+        android:layout_columnSpan="2"
+        android:layout_gravity="fill"
+        android:layout_row="3" />
 
-</LinearLayout>
+</GridLayout>
