--- a/res/layout/syncing_progressbar.xml
+++ b/res/layout/syncing_progressbar.xml
@@ -5,13 +5,18 @@
         <LinearLayout
             android:id="@+id/syncing_progress_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            style="@style/SyncBar"
+            >
+        
+        
             
             <ProgressBar
         android:id="@+id/progressBar1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-
+
             <TextView
                 android:id="@+id/progress_status"
                 android:layout_width="wrap_content"
