--- a/res/layout/fragment_login.xml
+++ b/res/layout/fragment_login.xml
@@ -29,11 +29,12 @@
             android:text="@string/login_username" />
 
         <EditText
-            android:id="@+id/editText1"
+            android:id="@+id/login_username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="fill_horizontal"
-            android:layout_marginLeft="20dp" >
+            android:layout_marginLeft="20dp" 
+            android:text="cust1">
 
             <requestFocus />
         </EditText>
@@ -46,17 +47,18 @@
             android:text="@string/login_password" />
 
         <EditText
-            android:id="@+id/editText2"
+            android:id="@+id/login_password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="fill_horizontal"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
             android:layout_weight="1"
-            android:inputType="textPassword" />
+            android:inputType="textPassword"
+            android:text="cust1" />
 
         <Button
-            android:id="@+id/button1"
+            android:id="@+id/login_submit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_columnSpan="2"
