--- a/res/layout/activity_search.xml
+++ b/res/layout/activity_search.xml
@@ -4,10 +4,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button" />
+    <fragment
+        android:id="@+id/fragment_search"
+        android:name="com.essers.tracking.ui.fragment.SearchFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+        <!-- Preview: layout=@layout/fragment_search -->
+    </fragment>
 
 </LinearLayout>
