--- a/res/layout/list_item_order.xml
+++ b/res/layout/list_item_order.xml
@@ -5,7 +5,7 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_weight="1"
-    android:columnCount="2"
+    android:columnCount="3"
     android:padding="10dp"
     android:rowCount="4" >
 
@@ -13,37 +13,63 @@
         android:id="@+id/item_reference"
         style="@style/OrderItem.Reference"
         android:layout_column="0"
+        android:layout_columnSpan="2"
         android:layout_row="1"
         android:text="AFBDKDKC DD" />
 
     <TextView
         android:id="@+id/item_order_id"
         android:layout_column="0"
+        android:layout_columnSpan="2"
         android:layout_row="2"
         android:text="TextView" />
 
     <TextView
-        android:id="@+id/item_delivery_date"
+        android:id="@+id/item_pickup_date"
+        style="@style/OrderItem.Normal"
+        android:layout_column="0"
+        android:layout_gravity="right"
+        android:layout_row="3"
+        android:text="Large Text" />
+
+    <TextView
+        android:id="@+id/item_pickup_name"
+        style="@style/OrderItem.Normal"
         android:layout_column="1"
-        
+        android:layout_gravity="right"
+        android:layout_row="3"
+        android:text="Large Text" />
+
+    <TextView
+        android:id="@+id/item_delivery_date"
+        style="@style/OrderItem.Normal"
+        android:layout_column="0"
+        android:layout_gravity="right"
+        android:layout_row="4"
+        android:text="Large Text" />
+
+    <TextView
+        android:id="@+id/item_pickup_name"
+        style="@style/OrderItem.Normal"
+        android:layout_column="1"
+        android:layout_gravity="right"
+        android:layout_row="4"
+        android:text="Large Text" />
+
+    <ImageView
+        android:id="@+id/item_order_state"
+        android:layout_column="2"
         android:layout_gravity="right"
         android:layout_row="1"
-        android:text="Large Text"
-        style="@style/OrderItem.DeliveryDate" />
+        android:layout_rowSpan="2"
+        android:src="@drawable/order_state" />
 
-    <TextView
-        android:id="@+id/item_status"
-        android:layout_column="1"
+    <ImageView
+        android:id="@+id/item_order_problem"
+        android:layout_column="2"
         android:layout_gravity="right"
-        android:layout_row="2"
-        android:text="TextView" />
-
-    <ProgressBar
-        android:id="@+id/item_progressbar"
-        style="@style/OrderItem.ProgressBar"
-        android:layout_column="0"
-        android:layout_columnSpan="2"
-        android:layout_gravity="fill"
-        android:layout_row="3" />
+        android:layout_row="3"
+        android:layout_rowSpan="2"
+        android:src="@drawable/order_problem" />
 
 </GridLayout>
