--- a/res/drawable/order_state.xml
+++ b/res/drawable/order_state.xml
@@ -2,20 +2,23 @@
 <level-list xmlns:android="http://schemas.android.com/apk/res/android" >
     <item
         android:drawable="@drawable/progress_pie_1"
-        android:maxLevel="1" />
+        android:maxLevel="0" />
     <item
         android:drawable="@drawable/progress_pie_2"
-        android:maxLevel="2" />
+        android:maxLevel="1" />
     <item
         android:drawable="@drawable/progress_pie_3"
-        android:maxLevel="3" />
+        android:maxLevel="2" />
     <item
         android:drawable="@drawable/progress_pie_4"
-        android:maxLevel="4" />
+        android:maxLevel="3" />
     <item
         android:drawable="@drawable/progress_pie_5"
-        android:maxLevel="5" />
+        android:maxLevel="4" />
     <item
         android:drawable="@drawable/progress_pie_6"
+        android:maxLevel="5" />
+    <item
+        android:drawable="@android:drawable/ic_delete"
         android:maxLevel="6" />
 </level-list>
