--- a/res/layout/fragment_order_detail.xml
+++ b/res/layout/fragment_order_detail.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/current_page"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView" />
