--- a/res/menu/order_detail.xml
+++ b/res/menu/order_detail.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:id="@+id/menu_search"
-        android:title="@string/menu_search"
+
+    <item
+        android:id="@+id/menu_search"
         android:icon="@android:drawable/ic_menu_search"
-        android:showAsAction="always"/>
-    
+        android:showAsAction="ifRoom|withText"
+        android:title="@string/menu_search"/>
+    <item
+        android:id="@+id/menu_stop"
+        android:icon="@drawable/ic_menu_stop"
+        android:showAsAction="ifRoom|withText"
+        android:title="@string/menu_stop"/>
 
 </menu>
