--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <color name="item_order_date">#000000</color>
     <color name="loading_more">#808080</color>
-    
     <color name="body_text_1">#ff000000</color>
-    <color name="body_text_2">#99000000</color>
+    <!-- <color name="body_text_2">#99000000</color> -->
+    <color name="body_text_2">#FF000000</color>
+    <color name="state_1">#BB065700</color>
+    <color name="state_2">#BB8C0000</color>
+
 </resources>
