--- a/res/drawable/order_problem.xml
+++ b/res/drawable/order_problem.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <level-list xmlns:android="http://schemas.android.com/apk/res/android" >
     <item
-        android:drawable="@android:drawable/ic_delete"
-        android:maxLevel="0" />
-    <item
-        android:drawable="@android:drawable/ic_dialog_alert"
-        android:maxLevel="1" />
+        android:drawable="@drawable/ic_action_triangle"
+        android:maxLevel="1"
+        android:minLevel="1" />
 </level-list>
