--- a/res/menu/order_detail.xml
+++ b/res/menu/order_detail.xml
@@ -3,12 +3,12 @@
 
     <item
         android:id="@+id/menu_search"
-        android:icon="@android:drawable/ic_menu_search"
+        android:icon="@drawable/ic_action_search"
         android:showAsAction="ifRoom|withText"
         android:title="@string/menu_search"/>
     <item
         android:id="@+id/menu_stop"
-        android:icon="@drawable/ic_menu_stop"
+        android:icon="@drawable/ic_action_logout"
         android:showAsAction="ifRoom|withText"
         android:title="@string/menu_stop"/>
 
