--- a/res/layout/tab_detail_map.xml
+++ b/res/layout/tab_detail_map.xml
@@ -1,20 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
+
+    <com.google.android.maps.MapView
+        android:id="@+id/mapview"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" >
+        android:layout_height="fill_parent"
+        android:apiKey="0P627WIiOHyRSdf3WIZQRgoDW_yoYA8YsnNZOYw"
+        android:clickable="true"
+        android:enabled="true" >
+    </com.google.android.maps.MapView>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
-            
-            <com.google.android.maps.MapView
-                android:id="@+id/mapview"
-                 android:layout_width="fill_parent"
-                 android:layout_height="fill_parent"
-                 android:apiKey="0P627WIiOHyRSdf3WIZQRgoDW_yoYA8YsnNZOYw"
-                 />
-
-        </LinearLayout>
-
-    </ScrollView>
+</RelativeLayout>
