--- a/res/layout/tab_detail_text.xml
+++ b/res/layout/tab_detail_text.xml
@@ -20,7 +20,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:columnCount="2" >
+                android:columnCount="1" >
 
                 <TextView
                     android:id="@+id/detail_reference"
@@ -29,15 +29,6 @@
                     android:layout_height="wrap_content"
                     android:padding="5dp"
                     android:text="TextView" />
-
-                <ImageView
-                    android:id="@+id/detail_order_state"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:layout_rowSpan="2"
-                    android:padding="5dp"
-                    android:src="@drawable/order_state" />
 
                 <TextView
                     android:id="@+id/detail_order_id"
@@ -63,21 +54,48 @@
 
         <GridLayout
             android:id="@+id/gridLayout2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:alignmentMode="alignBounds"
+            android:columnCount="2" >
+
+            <ImageView
+                android:id="@+id/detail_order_state"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:layout_margin="10dp"
+                android:layout_row="0"
+                android:src="@drawable/order_state" />
+
+            <TextView
+                android:id="@+id/detail_state_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="1"
+                android:layout_gravity="center_vertical"
+                android:layout_margin="10dp"
+                android:layout_row="0" />
+        </GridLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="fill_horizontal" >
+
+            <ImageView
+                android:id="@+id/detail_order_problem"
+                android:layout_margin="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/order_problem" />
 
             <TextView
                 android:id="@+id/detail_problem_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:text="TextView" />
-
-            <ImageView
-                android:id="@+id/detail_order_problem"
-                android:layout_gravity="right"
-                android:src="@drawable/order_problem" />
-        </GridLayout>
+                android:layout_margin="10dp"/>
+        </LinearLayout>
     </LinearLayout>
 
 </ScrollView>
