--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -54,6 +54,7 @@
     <style name="Orders.LoadingMoreData" parent="@style/TextSubtitle">
         <item name="android:layout_marginTop">10dp</item>
         <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:textColor">@color/loading_more</item>
         
     </style>
 
