--- a/res/layout/fragment_login.xml
+++ b/res/layout/fragment_login.xml
@@ -30,7 +30,11 @@
         android:layout_height="wrap_content"
         android:layout_gravity="fill_horizontal"
         android:layout_margin="20dp"
-        android:text="cust1" />
+        android:inputType="text"
+        android:text="cust1" >
+
+        <requestFocus />
+    </EditText>
 
     <TextView
         android:id="@+id/textView2"
