--- a/res/layout/fragment_search.xml
+++ b/res/layout/fragment_search.xml
@@ -17,6 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:inputType="text"
         android:layout_margin="20dp"
         android:hint="@string/search_order_id" >
 
