--- a/res/layout/tab_detail_map.xml
+++ b/res/layout/tab_detail_map.xml
@@ -12,4 +12,13 @@
         android:enabled="true" >
     </com.google.android.maps.MapView>
 
+    <TextView
+        android:id="@+id/map_no_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="@string/map_no_history"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:visibility="invisible" />
+
 </RelativeLayout>
